2010-10-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-extract-xmlns): if the node has a
	targetNamespace attribute define a "tns" alias for that namespace.
	(soap-wk2l): documentation update

2010-10-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-link-issue): add the "X-Atlassian-Token" header
	to the HTTP request.

2010-06-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-user-login-name): new variable
	(jira2-login): update jira2-user-login-name on a succesful login.
	(jira2-issue-key, jira2-issue-owner, jira2-issue-status): new functions

2010-05-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-invoke): check the HTTP response before
	trying to parse the SOAP XML envelope
	(soap-client): new defgroup
	(soap-debug): new variable

2010-05-07  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-resolve-references-for-sequence-type):
	resolve references for inline structures (which are not referenced
	in the wsdl namespaces)
	(soap-parse-sequence): intern element names

2010-05-06  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-encode-basic-type): encode an emacs style
	time value such as received by (current-time) into the xsd format.
	(soap-encode-body): when encoding literal documents, make the
	toplevel tags unqualified and add their namespace to the tag
	itself
	(soap-encode-body): add the "soapenc:encodingStyle" attribute only
	for encoded documents.

2010-05-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-bound-operation): new struct
	(soap-binding): rename soap-actions to operations
	(soap-l2wsdl): new function
	(soap-resolve-references-for-operation): if no parameter-order is
	specified, construct a default one.
	(soap-resolve-references-for-binding): resolve references in
	bound-operations
	(soap-parse-message): recognize the 'element attribute
	(soap-parse-binding): extract the soap-action and use for every